# prove

./: .gitignore  .pre-commit-config.yaml  404.html  :w  CHANGELOG.md  CNAME  FUNDING.yml  MAINTAIN-py.md  OPTIMIZE-C.md  README.md  clean.md  cleanupse.md  example.prv  index.html  keywords.toml  lints.md  mkdocs.yml  ml-proof.md  philosophy.md  requirements.txt  robots.txt  sitemap.xml  test.json
prove/: .gitignore  0.0-PLAN.md  0.1-PLAN.md  0.2-PLAN.md  0.4.2-PLAN.md  0.5-PLAN.md  0.6-PLAN.md  0.7-PLAN.md  1.0-PLAN.md  1.1-PLAN.md  1.2-PLAN.md  README.md  prove.toml  pyproject.toml
prove-py/: .gitignore  0.8-PLAN.md  0.9.1-PLAN.md  0.9.2-PLAN.md  0.9.3-PLAN.md  0.9.4-PLAN.md  0.9.5-PLAN.md  0.9.6-PLAN.md  1.0-PLAN.md  1.1-PLAN.md  1.3-PLAN.md  README.md  pyproject.toml
prove-py/archive/: 0.2-PLAN.md  0.3-PLAN.md  0.4-PLAN.md  0.6-PLAN.md  0.7-PLAN.md  0.8-PLAN.md  0.9-PLAN.md  0.9.1-PLAN.md  0.9.3-PLAN.md  0.9.4-PLAN.md  0.9.5-PLAN.md  0.9.6-PLAN.md  0.9.7-PLAN.md
prove-py/examples/: all_diagnostics.prv
prove-py/scripts/: build_stores.py
prove-py/tests/: conftest.py  helpers.py  runtime_helpers.py  test_ai_resistance.py  test_array_runtime_c.py  test_ast_serial.py  test_body_gen.py  test_builder.py  test_bytes_runtime_c.py  test_c_emitter.py  test_c_types.py  test_checker.py  test_checker_contracts.py  test_checker_imports.py  test_checker_match.py  test_checker_types.py  test_checker_verbs.py  test_cli.py  test_convert_runtime_c.py  test_database_runtime_c.py  test_diagnostic_links.py  test_diagnostics.py  test_error_runtime_c.py  test_event_runtime_c.py  test_export.py  test_foreign.py  test_format_runtime_c.py  test_formatter.py  test_formatter_fixes.py  test_generate.py  test_graphic.py  test_hash_crypto_runtime_c.py  test_intent.py  test_intent_e2e.py  test_interpreter.py  test_io_runtime_c.py  test_language_runtime_c.py  test_lexer.py  test_list_runtime_c.py  test_lockfile.py  (+40 more)
prove/archive/: 0.1-PLAN.md  0.3-PLAN.md  0.4-PLAN.md  0.5-PLAN.md
prove/src/: ast.prv  errors.prv  main.prv  source.prv  tokens.prv
prove/stdlib/: http.prv  input_output.prv  io.prv  json.prv  list_utils.prv  string_utils.prv
prove/tests/: helpers.py  test_asm_codegen.py  test_asm_emitter.py  test_builder.py  test_c_emitter.py  test_c_types.py  test_checker.py  test_cli.py  test_foreign.py  test_formatter.py  test_io_runtime_c.py  test_lexer.py  test_lsp.py  test_parser.py  test_prover.py  test_runtime_c.py  test_stdlib_loader.py  test_testing.py
pygments-prove/: pyproject.toml
pygments-prove/pygments_prove.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
(+987 files in other folders)
