[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prove"
version = "0.1.0"
description = "The Prove programming language compiler"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "click>=8.1",
    "pygls>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
prove = "prove.cli:main"
prove-lsp = "prove.lsp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"prove" = ["py.typed"]
"prove.runtime" = ["*.h", "*.c"]
"prove.stdlib" = ["*.prv"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: tests that require C compilation",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
warn_return_any = false
disable_error_code = ["union-attr", "arg-type", "list-item"]

[[tool.pyright]]
disable = ["missing-module-docstring"]
