[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-prove"
version = "0.1.0"
description = "Pygments lexer for the Prove programming language"
requires-python = ">=3.11"
dependencies = ["pygments>=2.0"]

[project.entry-points."pygments.lexers"]
prove = "pygments_prove:ProveLexer"
